# bank-statement-converter

./: .gitignore  README.md  docker-compose.yml  requirements.txt
.github/workflows/: build-and-push.yml
app/entities/: csv_writer.py  pdf_reader.py
app/exceptions/: bank.py
app/routers/: convert.py
app/strategies/: parser_context.py
app/use_cases/: base.py  convert_to_csv.py
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py  settings.py
backend/app/entities/: csv_writer.py
backend/app/middlewares/: logger.py
backend/app/routers/: convert.py
backend/app/strategies/: c6_strategy.py  inter_parser.py  parser_strategy.py
backend/app/use_cases/: base.py  convert_to_csv.py
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  styleguide.css
frontend/.storybook/: preview-head.html
frontend/src/: App.js
frontend/src/components/Input/: Input.jsx  Input.stories.js  style.css
frontend/src/icons/StartAdornment/: StartAdornment.jsx  index.js
frontend/src/screens/Desktop/: Desktop.jsx  style.css
